--- a/index.html
+++ b/index.html
@@ -7,4 +7,9 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <title> Jodi Jackson Web Developer Project placeholder</title>
 
+
 </head>
+<Header>
+    <H1> Portfolio Placeholder</H1>
+</Header>
+</html>
